--- a/festo-frontend/quotation-management/src/app/quotations/add-revised-quotation/add-revised-quotation.component.css
+++ b/festo-frontend/quotation-management/src/app/quotations/add-revised-quotation/add-revised-quotation.component.css
@@ -20,7 +20,9 @@
   border: 1px solid #D7CFAE;
   background: #e9eef1;
 }
-
+mat-spinner {
+  margin: 0 auto;
+}
 
 
 /*Animation for spinner on button*/
