--- a/festo-frontend/quotation-management/src/app/quotations/update-quotation/update-quotation.component.css
+++ b/festo-frontend/quotation-management/src/app/quotations/update-quotation/update-quotation.component.css
@@ -23,7 +23,9 @@
     width: 80%; margin: 50px auto;
   }
 }
-
+mat-spinner {
+  margin: 0 auto;
+}
 
 /*Animation for spinner on button*/
 @keyframes spinner {
