--- a/festo-frontend/product-management/src/app/component/notification/notification.component.css
+++ b/festo-frontend/product-management/src/app/component/notification/notification.component.css
@@ -1,23 +1,8 @@
+table{
+  width: 100%;
+}
 th.mat-header-cell {
-  width: 10%;
-  min-width: 123px;
+  width: 14%;
 }
-.toolbar-right-content small {
-  margin-left: 10px;
-}
-.float-left.statusCtlBtn button {
-  margin-right: 10px;
-}
-.quotation-data mat-toolbar.mat-toolbar.mat-toolbar-single-row {
-  font-size: medium;
-}
-.list-item {
-  margin: 0px 20px 0px 10px;
-}
-tr.mat-row.ng-star-inserted.selected {
-  background: lightblue;
-}
-mat-spinner {
-  margin: 0 auto;
-}
+
 @media (max-width:575.98px){.table-responsive-sm{display:block;width:100%;overflow-x:auto;-webkit-overflow-scrolling:touch}.table-responsive-sm>.table-bordered{border:0}}@media (max-width:767.98px){.table-responsive-md{display:block;width:100%;overflow-x:auto;-webkit-overflow-scrolling:touch}.table-responsive-md>.table-bordered{border:0}}@media (max-width:991.98px){.table-responsive-lg{display:block;width:100%;overflow-x:auto;-webkit-overflow-scrolling:touch}.table-responsive-lg>.table-bordered{border:0}}@media (max-width:1199.98px){.table-responsive-xl{display:block;width:100%;overflow-x:auto;-webkit-overflow-scrolling:touch}.table-responsive-xl>.table-bordered{border:0}}.table-responsive{display:block;width:100%;overflow-x:auto;-webkit-overflow-scrolling:touch}
