--- a/festo-frontend/quotation-management/src/app/dialog/product/product.dialog.html
+++ b/festo-frontend/quotation-management/src/app/dialog/product/product.dialog.html
@@ -18,7 +18,7 @@
 
     <ng-container matColumnDef="quantity">
       <th mat-header-cell *matHeaderCellDef> Quantity </th>
-      <td mat-cell *matCellDef="let element"> {{element.productQty}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.productQty}}{{element.productUnit}} </td>
     </ng-container>
 
     <ng-container matColumnDef="price">
