--- a/festo-frontend/quotation-management/src/app/quotations/add-revised-quotation/add-revised-quotation.component.html
+++ b/festo-frontend/quotation-management/src/app/quotations/add-revised-quotation/add-revised-quotation.component.html
@@ -5,9 +5,14 @@
     </button>
     Revise the quotation
   </mat-toolbar>
-
-  <mat-card>
-    <form class="example-form" [formGroup]="updateQuotationForm">
+  <mat-card *ngIf="showSpinner">
+    <mat-spinner></mat-spinner>
+  </mat-card>
+  <mat-card *ngIf="!showSpinner">
+    <div *ngIf="quotation.printCount==0">
+      This quotation need to be printed first. After first print, you can add revision. You can <span style="color: #1c25fd; cursor: pointer; font-weight: 800; font-size: 25px" (click)="router.navigate(['/quotation/update/'+quotation.id])">update</span> now.
+    </div>
+    <form *ngIf="quotation.printCount>0" class="example-form" [formGroup]="updateQuotationForm">
       <mat-accordion class="example-headers-align">
         <mat-expansion-panel [disabled]="true" [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
           <mat-expansion-panel-header>
@@ -175,7 +180,7 @@
             <div class="col-md-4">
               <div class="input-group">
                 <mat-form-field class="remarks">
-                  <input matInput placeholder="Quotation Reference" formControlName="quotaRef">
+                  <input matInput placeholder="PR Reference" formControlName="quotaRef">
                 </mat-form-field>
               </div>
             </div>
@@ -200,7 +205,7 @@
                *ngFor="let product of updateQuotationForm.get('productList')['controls']; let i=index" id="singleProduct">
             <div [formGroupName]="i">
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                   <div class="input-group">
                     <mat-form-field class="product-name">
                       <input matInput #thisStatus placeholder="Product Name" [matAutocomplete]="pName"
@@ -221,7 +226,7 @@
                   </span>
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
                   <div class="input-group">
                     <mat-form-field class="part-number">
                       <input matInput placeholder="Part No" [matAutocomplete]="part" aria-label="State"
@@ -286,6 +291,19 @@
                       <input matInput type="number" placeholder="Quantity Available" formControlName="productQtyAvailable">
                       <mat-error *ngIf="product.get('productQtyAvailable').hasError('required')">Field is required</mat-error>
                       <mat-error *ngIf="product.get('productQtyAvailable').hasError('min')">Quantity can't be negative</mat-error>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="input-group">
+                    <mat-form-field class="unit">
+                      <input matInput placeholder="Product Unit" aria-label="unit" formControlName="productUnit" [matAutocomplete]="auto">
+                      <mat-autocomplete #auto="matAutocomplete">
+                        <mat-option *ngFor="let unit of units" [value]="unit">
+                          {{unit}}
+                        </mat-option>
+                      </mat-autocomplete>
+                      <mat-error>Field is required</mat-error>
                     </mat-form-field>
                   </div>
                 </div>
