--- a/festo-frontend/quotation-management/src/app/quotations/manage-quotation/manage-quotation.component.html
+++ b/festo-frontend/quotation-management/src/app/quotations/manage-quotation/manage-quotation.component.html
@@ -4,7 +4,7 @@
       <button matTooltip="Back" mat-flat-button style="background: #f5f5f5;" (click)="location.back()">
         <mat-icon>keyboard_arrow_left</mat-icon>
       </button>
-      <span>Quotations</span>
+      <span>Quotations {{staffTitleText}}</span>
     </div>
     <div *ngIf="!isHandset">
       <button mat-button (click)="exportAsCSV()">Export as CSV</button>
@@ -27,11 +27,7 @@
       <mat-form-field floatLabel="never" style="width: 85px;margin-right: 10px;">
         <mat-label>All</mat-label>
         <mat-select (selectionChange)="router.navigate(['/quotations/status/', status])" [(ngModel)]="status">
-          <mat-option value="all">All</mat-option>
-          <mat-option value="win">Win</mat-option>
-          <mat-option value="loss">Loss</mat-option>
-          <mat-option value="pending">Pending</mat-option>
-          <mat-option value="incomplete">Incomplete</mat-option>
+          <mat-option *ngFor="let qs of quotaStatus" value="{{qs}}">{{qs}}</mat-option>
         </mat-select>
       </mat-form-field>
 
@@ -81,7 +77,7 @@
             <div class="list-item">
               <small>
                 From:
-                <mat-form-field class="fromDate" floatLabel="never">
+                <mat-form-field style="width: 77%;" class="fromDate" floatLabel="never">
                   <input matInput [matDatepicker]="picker" name="fromDate" [(ngModel)]="filterData.fromDate"
                          placeholder="Choose a date" (dateChange)="filterByDate(filterData)">
                   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -92,7 +88,7 @@
             <div class="list-item">
               <small>
                 To:
-                <mat-form-field class="toDate" floatLabel="never">
+                <mat-form-field style="width: 92%;" class="toDate" floatLabel="never">
                   <input matInput [matDatepicker]="picker2" name="toData" [(ngModel)]="filterData.toDate"
                          placeholder="Choose a date" (dateChange)="filterByDate(filterData)">
                   <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
@@ -101,20 +97,16 @@
               </small>
             </div>
             <div class="list-item">
-              <mat-form-field floatLabel="never">
+              <mat-form-field style="width: 100%;" floatLabel="never">
                 <mat-label>All</mat-label>
                 <mat-select (selectionChange)="router.navigate(['/quotations/status/', status])" [(ngModel)]="status">
-                  <mat-option value="all">All</mat-option>
-                  <mat-option value="win">Win</mat-option>
-                  <mat-option value="loss">Loss</mat-option>
-                  <mat-option value="pending">Pending</mat-option>
-                  <mat-option value="incomplete">Incomplete</mat-option>
+                  <mat-option *ngFor="let qs of quotaStatus" value="{{qs}}">{{qs}}</mat-option>
                 </mat-select>
               </mat-form-field>
             </div>
             <div class="list-item">
               <button mat-button [matMenuTriggerFor]="menu"
-                      style="line-height: 0;border-bottom: 1px solid black;border-radius: 0px;"><i
+                      style="line-height: 0;padding-bottom: 1px;border-bottom: 1px solid black;border-radius: 0px;"><i
                 class="material-icons">
                 search
               </i>
@@ -151,12 +143,36 @@
   <mat-card>
     <mat-card-content>
       <div class="float-left statusCtlBtn" style="float: left;" *ngIf="selectedQuotation && permission.qms.qms_status">
-        <button mat-stroked-button [disabled]="!this.clickedDiv || selectedQuotation.status=='Win'" (click)="markAs('Win')">Mark as Win</button>
-        <button mat-stroked-button [disabled]="!this.clickedDiv || selectedQuotation.status=='Loss'"(click)="markAs('Loss')">Mark as Loss</button>
-        <button mat-stroked-button [disabled]="!this.clickedDiv || selectedQuotation.status=='Pending'" (click)="markAs('Pending')">Mark as Pending</button>
+        <div *ngIf="!isHandset">
+          <button mat-stroked-button [disabled]="!this.clickedDiv || selectedQuotation.status=='Preparing'" (click)="markAs('Preparing')">Mark as Preparing</button>
+          <button mat-stroked-button [disabled]="!this.clickedDiv || selectedQuotation.status=='Ready'" (click)="markAs('Ready')">Mark as Ready</button>
+          <button mat-stroked-button [disabled]="!this.clickedDiv || selectedQuotation.status=='Win'" (click)="markAs('Win')">Mark as Win</button>
+          <button mat-stroked-button [disabled]="!this.clickedDiv || selectedQuotation.status=='Loss'"(click)="markAs('Loss')">Mark as Loss</button>
+          <button mat-stroked-button [disabled]="!this.clickedDiv || selectedQuotation.status=='Pending'" (click)="markAs('Pending')">Mark as Pending</button>
+        </div>
+        <div *ngIf="isHandset">
+          <button mat-button [disabled]="!this.clickedDiv" [matMenuTriggerFor]="statusAction" style="padding-bottom: 1px;border-bottom: 1px solid black;border-radius: 0px;">
+            Mark as
+            <div class="mat-select-arrow-wrapper">
+              <div class="mat-select-arrow"></div>
+            </div>
+          </button>
+          <mat-menu #statusAction="matMenu">
+            <button mat-menu-item (click)="markAs('Preparing')">Preparing</button>
+            <button mat-menu-item (click)="markAs('Ready')">Ready</button>
+            <button mat-menu-item (click)="markAs('Win')">Win</button>
+            <button mat-menu-item (click)="markAs('Loss')">Loss</button>
+            <button mat-menu-item (click)="markAs('Pending')">Pending</button>
+          </mat-menu>
+        </div>
       </div>
       <div class="right" style="float: right;">
         <div class="associates" style="float: left;">
+          <button mat-icon-button *ngIf="routerPath!='quotations/staff/'" [disabled]="!clickedDiv" matTooltip="View all quotations of this staff" color="accent" (click)="router.navigate(['quotations/staff/',selectedQuotation.contactByUsername])">
+            <i class="material-icons">
+              verified_user
+            </i>
+          </button>
           <button *ngIf="permission.qms.qms_history" mat-icon-button [disabled]="!clickedDiv || selectedQuotation.history.length<1" matTooltip="Update List" color="accent" (click)="router.navigate(['quotation/history/',selectedQuotation.id])">
             <i class="material-icons">
               playlist_add_check
@@ -191,7 +207,7 @@
             </i><sub style="position: absolute;top: 1px;left: 10px;width: 20px;text-align: center;font-size: 11px;" *ngIf="clickedDiv">{{selectedQuotation.revision.length}}</sub>
           </button>
           </span>
-          <button *ngIf="permission.qms.qms_pdf" [disabled]="!clickedDiv || selectedQuotation.productList.length<1"  matTooltip="Print" mat-icon-button color="primary"
+          <button *ngIf="permission.qms.qms_pdf" [disabled]="!clickedDiv || selectedQuotation.productList.length<1||selectedQuotation.state=='Incomplete'"  matTooltip="Print" mat-icon-button color="primary"
                   (click)="gotoPDF(selectedQuotation)">
             <i class="material-icons">
               print
@@ -243,7 +259,7 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr style="cursor:pointer;" mat-row (click)="selectRow(row)" [class]="clickedDiv==row.id?'mat-row ng-star-inserted selected':'mat-row ng-star-inserted'" *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
-      <mat-paginator [pageSizeOptions]="[25,50,100,150,200,500]"></mat-paginator>
+      <mat-paginator [pageSizeOptions]="[25,50,100,150,200,500]" *ngIf="!showSpinner"></mat-paginator>
     </mat-card-content>
   </mat-card>
 </div>
