--- a/front-end/quotation-management/src/app/quotations/manage-quotation/manage-quotation.component.html
+++ b/front-end/quotation-management/src/app/quotations/manage-quotation/manage-quotation.component.html
@@ -33,7 +33,7 @@
 
 
       <button matTooltip="Change filter type" mat-button [matMenuTriggerFor]="menu"
-              style="line-height: 0;border-bottom: 1px solid black;border-radius: 0px;"><i class="material-icons">
+              style="line-height: 0;border-bottom: 1px solid black;border-radius: 0;padding-bottom: 2px;"><i class="material-icons">
         search
       </i>
         <div class="mat-select-arrow-wrapper">
