--- a/front-end/product-management/src/app/main-nav/main-nav.component.html
+++ b/front-end/product-management/src/app/main-nav/main-nav.component.html
@@ -9,6 +9,9 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/">Home</a>
       <a mat-list-item routerLink="/products">Manage products</a>
+      <a *ngIf="showNotificationIcon" mat-list-item routerLink="/notification">
+        <mat-icon>notifications</mat-icon> Notification<span class="fill-remaining-space"></span><span style="float: right;">{{notificationCounter}}</span>
+      </a>
       <a mat-list-item [matMenuTriggerFor]="menu">
         <mat-icon>apps</mat-icon>
         Applications
