--- a/front-end/quotation-management/src/app/quotations/update-quotation/update-quotation.component.html
+++ b/front-end/quotation-management/src/app/quotations/update-quotation/update-quotation.component.html
@@ -25,7 +25,7 @@
             <div class="col-md-6">
               <div class="input-group">
                 <mat-form-field class="date">
-                  <input matInput [matDatepicker]="picker" placeholder="Choose a date" formControlName="date">
+                  <input matInput [matDatepicker]="picker" placeholder="Choose a date" formControlName="date" required>
                   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                   <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
@@ -34,7 +34,7 @@
             <div class="col-md-6">
               <div class="input-group">
                 <mat-form-field class="quota_no">
-                  <input matInput placeholder="Quotation Number" formControlName="quotaNo">
+                  <input matInput placeholder="Quotation Number" formControlName="quotaNo" required>
                   <mat-error>Field is required</mat-error>
                 </mat-form-field>
               </div>
@@ -67,7 +67,7 @@
               <div class="input-group">
                 <mat-form-field class="branch">
                   <input matInput placeholder="Branch Name" [matAutocomplete]="branchComplete"
-                         formControlName="branchName" (input)="pickBranch(updateQuotationForm.value.branchName)">
+                         formControlName="branchName" (input)="pickBranch(updateQuotationForm.value.branchName)" required>
                   <mat-autocomplete #branchComplete="matAutocomplete">
                     <mat-option *ngFor="let branch of filteredBranch" [value]="branch.branchName"
                                 (onSelectionChange)="selectBranch(branch)">
@@ -87,8 +87,7 @@
             <div class="col-md-6">
               <div class="input-group">
                 <mat-form-field class="branchAddress">
-                  <input matInput placeholder="Branch Adress" formControlName="branchAddress">
-
+                  <input matInput placeholder="Branch Adress" formControlName="branchAddress" required>
                   <mat-error>Field is required</mat-error>
                 </mat-form-field>
               </div>
@@ -99,7 +98,7 @@
               <div class="input-group">
                 <mat-form-field class="contact_person">
                   <input matInput placeholder="Contact Person" [matAutocomplete]="contactComplete"
-                         formControlName="contactPerson" (input)="pickContact(updateQuotationForm.value.contactPerson)">
+                         formControlName="contactPerson" (input)="pickContact(updateQuotationForm.value.contactPerson)" required>
                   <mat-autocomplete #contactComplete="matAutocomplete">
                     <mat-option *ngFor="let name of filteredContact" [value]="name.personName"
                                 (onSelectionChange)="selectPerson(name)">
@@ -120,7 +119,7 @@
             <div class="col-md-6">
               <div class="input-group">
                 <mat-form-field class="designation">
-                  <input matInput placeholder="Designation" formControlName="designation">
+                  <input matInput placeholder="Designation" formControlName="designation" required>
                   <mat-error>Field is required</mat-error>
                 </mat-form-field>
               </div>
@@ -131,7 +130,7 @@
               <div class="input-group">
                 <mat-form-field>
                   <mat-label>Status</mat-label>
-                  <mat-select formControlName="status">
+                  <mat-select formControlName="status" required>
                     <mat-option *ngFor="let p of quotaStatus" [value]="p.value">
                       {{ p.value }}
                     </mat-option>
@@ -144,7 +143,7 @@
               <div class="input-group">
                 <mat-form-field class="contact_by">
                   <input [matAutocomplete]="contactByComplete" matInput placeholder="Contact By"
-                         formControlName="contactBy" (input)="filterContactBy($event.target.value)">
+                         formControlName="contactBy" (input)="filterContactBy($event.target.value)" required>
                   <mat-autocomplete #contactByComplete="matAutocomplete">
                     <mat-option *ngFor="let user of allUser" [value]="user.name" (onSelectionChange)="selectContactBy(user)">
                       <span>{{user.name}}</span>
@@ -158,7 +157,7 @@
               <div class="input-group">
                 <mat-form-field class="contact_by_designation">
                   <input matInput placeholder="Contact By Designation"
-                         formControlName="contactByDesignation">
+                         formControlName="contactByDesignation" required>
                   <mat-error>Field is required</mat-error>
                 </mat-form-field>
               </div>
@@ -167,7 +166,7 @@
               <div class="input-group">
                 <mat-form-field class="contact_by_phone">
                   <input matInput placeholder="Contact By Phone"
-                         formControlName="contactByPhone">
+                         formControlName="contactByPhone" required>
                   <mat-error>Field is required</mat-error>
                 </mat-form-field>
               </div>
@@ -214,7 +213,7 @@
                     <mat-form-field class="product-name">
                       <input matInput #thisStatus placeholder="Product Name" [matAutocomplete]="pName"
                              aria-label="State"
-                             formControlName="productName" (focus)="focusStatus(i)" (input)="pickProduct(product.value.productName)">
+                             formControlName="productName" (focus)="focusStatus(i)" (input)="pickProduct(product.value.productName)" required>
                       <mat-autocomplete #pName="matAutocomplete">
                         <mat-option *ngFor="let prdt of SearchProduct" [value]="prdt.productName"
                                     (onSelectionChange)="selectProduct(prdt, i, product.value.productQty)">
@@ -235,7 +234,7 @@
                     <mat-form-field class="part-number">
                       <input matInput placeholder="Part No" [matAutocomplete]="part" aria-label="State"
                              formControlName="productPartNumber"
-                             (input)="pickProductByPart(product.value.productPartNumber)" (focus)="focusStatus(i)">
+                             (input)="pickProductByPart(product.value.productPartNumber)" (focus)="focusStatus(i)" required>
                       <mat-autocomplete #part="matAutocomplete">
                         <mat-option *ngFor="let prdt of SearchProduct" [value]="prdt.productPartNumber"
                                     (onSelectionChange)="selectProduct(prdt, i, product.value.productQty)">
@@ -256,7 +255,7 @@
                     <mat-form-field class="type">
                       <input matInput placeholder="Product Type" [matAutocomplete]="type" aria-label="type"
                              formControlName="productType"
-                             (input)="pickType(product.value.productType)" (focus)="focusStatus(i)">
+                             (input)="pickType(product.value.productType)" (focus)="focusStatus(i)" required>
                       <mat-autocomplete #type="matAutocomplete">
                         <mat-option *ngFor="let type of SearchProduct" [value]="type.productType"
                                     (onSelectionChange)="selectProduct(type, i, product.value.productQty)">
@@ -276,7 +275,7 @@
                 <div class="col-md-4">
                   <div class="input-group">
                     <mat-form-field class="internal">
-                      <input matInput placeholder="Internal Part Number" formControlName="internalPartNumber">
+                      <input matInput placeholder="Internal Part Number" formControlName="internalPartNumber" required>
                       <mat-error>Field is required</mat-error>
                     </mat-form-field>
                   </div>
@@ -284,7 +283,7 @@
                 <div class="col-md-2">
                   <div class="input-group">
                     <mat-form-field class="qty">
-                      <input matInput type="number" placeholder="Required Quantity" formControlName="productQty">
+                      <input matInput type="number" placeholder="Required Quantity" formControlName="productQty" required>
                       <mat-error>Field is required</mat-error>
                     </mat-form-field>
                   </div>
@@ -292,7 +291,7 @@
                 <div class="col-md-2">
                   <div class="input-group">
                     <mat-form-field class="qty">
-                      <input matInput type="number" placeholder="Available Quantity" formControlName="productQtyAvailable">
+                      <input matInput type="number" placeholder="Available Quantity" formControlName="productQtyAvailable" required>
                       <mat-error>Field is required</mat-error>
                     </mat-form-field>
                   </div>
@@ -300,7 +299,7 @@
                 <div class="col-md-4">
                   <div class="input-group">
                     <mat-form-field class="unit">
-                      <input matInput placeholder="Product Unit" aria-label="unit" formControlName="productUnit" [matAutocomplete]="auto">
+                      <input matInput placeholder="Product Unit" aria-label="unit" formControlName="productUnit" [matAutocomplete]="auto" required>
                       <mat-autocomplete #auto="matAutocomplete">
                         <mat-option *ngFor="let unit of units" [value]="unit">
                           {{unit}}
@@ -357,23 +356,21 @@
                 <div class="col-md-6">
                   <div class="input-group">
                     <mat-form-field class="product-name">
-                      <input matInput placeholder="Product Name"
-                             formControlName="productName">
+                      <input matInput placeholder="Product Name" disabled value="{{product.get('productName').value}}" required>
                     </mat-form-field>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="input-group">
                     <mat-form-field class="part-number">
-                      <input matInput placeholder="Part No"
-                             formControlName="productPartNumber">
+                      <input matInput placeholder="Part No" disabled value="{{product.get('productPartNumber').value}}" required>
                     </mat-form-field>
                   </div>
                 </div>
                 <div class="col-md-12">
                   <div class="input-group">
-                    <mat-form-field class="price">
-                      <input matInput type="number" placeholder="Unit Price" formControlName="productPrice" (input)="productPriceInputed($event.target.value, i)">
+                    <mat-form-field class="price" required>
+                      <input matInput type="number" placeholder="Unit Price" formControlName="productPrice" (input)="productPriceInputed($event.target.value, i)" required>
                     </mat-form-field>
                   </div>
                 </div>
@@ -399,28 +396,28 @@
             <div>
               <div class="input-group">
                 <mat-form-field class="subject">
-                  <input matInput placeholder="Subject" formControlName="pdfSubject">
+                  <input matInput placeholder="Subject" formControlName="pdfSubject" required>
                 </mat-form-field>
               </div>
             </div>
             <div>
               <div class="input-group">
                 <mat-form-field class="body">
-                  <input matInput placeholder="Body" formControlName="pdfBody">
+                  <input matInput placeholder="Body" formControlName="pdfBody" required>
                 </mat-form-field>
               </div>
             </div>
             <div>
               <div class="input-group">
                 <mat-form-field class="vat">
-                  <input matInput type="number" placeholder="Vat" formControlName="pdfVat">
+                  <input matInput type="number" placeholder="Vat" formControlName="pdfVat" required>
                 </mat-form-field>
               </div>
             </div>
             <div>
               <div class="input-group">
                 <mat-form-field class="suggestion">
-                  <input matInput placeholder="Suggestion" formControlName="suggestion">
+                  <input matInput placeholder="Suggestion" formControlName="suggestion" required>
                 </mat-form-field>
               </div>
             </div>
