--- a/front-end/product-management/src/app/component/manage-product/manage-product.component.css
+++ b/front-end/product-management/src/app/component/manage-product/manage-product.component.css
@@ -31,6 +31,12 @@ mat-toolbar.mat-toolbar.mat-toolbar-single-row {
 tr.mat-row.ng-star-inserted.selected {
   background: lightblue;
 }
+.hide{
+  display: none;
+}
+.show{
+  display: block;
+}
 
 @media (max-width:575.98px){.table-responsive-sm{display:block;width:100%;overflow-x:auto;-webkit-overflow-scrolling:touch}.table-responsive-sm>.table-bordered{border:0}}@media (max-width:767.98px){.table-responsive-md{display:block;width:100%;overflow-x:auto;-webkit-overflow-scrolling:touch}.table-responsive-md>.table-bordered{border:0}}@media (max-width:991.98px){.table-responsive-lg{display:block;width:100%;overflow-x:auto;-webkit-overflow-scrolling:touch}.table-responsive-lg>.table-bordered{border:0}}@media (max-width:1199.98px){.table-responsive-xl{display:block;width:100%;overflow-x:auto;-webkit-overflow-scrolling:touch}.table-responsive-xl>.table-bordered{border:0}}.table-responsive{display:block;width:100%;overflow-x:auto;-webkit-overflow-scrolling:touch}
 
