--- a/front-end/product-management/src/app/component/manage-product/manage-product.component.html
+++ b/front-end/product-management/src/app/component/manage-product/manage-product.component.html
@@ -149,8 +149,7 @@
         <mat-spinner *ngIf="showSpinner"></mat-spinner>
       </div>
 
-      <table *ngIf="!showSpinner" mat-table [dataSource]="product" class="mat-elevation-z8 table-responsive" matSort>
-
+      <table mat-table [dataSource]="product" [class]="showSpinner?'hide':'mat-elevation-z8 table-responsive mat-table'" matSort>
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> ID</th>
           <td mat-cell *matCellDef="let element"> {{element.productId}}</td>
@@ -180,10 +179,10 @@
         <ng-container matColumnDef="description">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Description</th>
           <td mat-cell *matCellDef="let element">
-            <span *ngIf="element.productDescription.length>50">
+            <span [class]="element.productDescription.length>50?'show':'hide'">
               {{element.productDescription|slice:0:50}}...
             </span>
-            <span *ngIf="element.productDescription.length<=50">{{element.productDescription}}</span>
+            <span [class]="element.productDescription.length<=50?'show':'hide'">{{element.productDescription}}</span>
           </td>
         </ng-container>
         <ng-container matColumnDef="price" *ngIf="permission.pms.pms_price_log">
