--- a/front-end/quotation-management/src/app/quotations/manage-history/manage-history.component.html
+++ b/front-end/quotation-management/src/app/quotations/manage-history/manage-history.component.html
@@ -10,7 +10,7 @@
   <mat-card>
     <mat-card-content>
       <mat-spinner *ngIf="showSpinner"></mat-spinner>
-      <table *ngIf="!showSpinner" mat-table [dataSource]="historyArray" class="mat-elevation-z8 table-responsive" matSort>
+      <table mat-table [dataSource]="historyArray" [class]="showSpinner?'hide':'mat-elevation-z8 table-responsive mat-table'" matSort>
 
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> # </th>
@@ -19,17 +19,17 @@
 
         <!-- Name Column -->
         <ng-container matColumnDef="update_date">
-          <th mat-header-cell *matHeaderCellDef> Updated On</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Updated On</th>
           <td mat-cell *matCellDef="let element"> {{element.updatedOn}}</td>
         </ng-container>
 
         <!-- Weight Column -->
         <ng-container matColumnDef="delivery_date">
-          <th mat-header-cell *matHeaderCellDef> Delivery Date</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Delivery Date</th>
           <td mat-cell *matCellDef="let element"> {{element.updatedQuotationDate*1000 | date}}</td>
         </ng-container>
         <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Status</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header mat-sort-header> Status</th>
           <td mat-cell *matCellDef="let element">{{element.updatedQuotationStatus}}</td>
         </ng-container>
         <ng-container matColumnDef="product">
@@ -50,7 +50,7 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
-      <mat-paginator [pageSizeOptions]="[10, 25, 50,100,150,200,500]"></mat-paginator>
+      <mat-paginator [pageSizeOptions]="[10, 25, 50,100,150,200,500]" [class]="showSpinner?'hide':'mat-paginator'" showFirstLastButtons></mat-paginator>
     </mat-card-content>
   </mat-card>
 </div>
